[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Script/Base/BaseMagicWeapon.gd" id="1"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [],
"loop": false,
"name": &"hit",
"speed": 25.0
}, {
"frames": [],
"loop": false,
"name": &"wait",
"speed": 25.0
}]
script = null

[sub_resource type="CircleShape2D" id="2"]
script = null

[node name="BaseMagicWeapon" type="Node2D"]
script = ExtResource( "1" )

[node name="Bullet" type="Node" parent="."]

[node name="MgAction" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource( "1" )
animation = &"hit"

[node name="MgPlayer" type="AnimationPlayer" parent="."]

[node name="SkillCD" type="Timer" parent="."]
one_shot = true

[node name="HitBox" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( "2" )

[connection signal="timeout" from="SkillCD" to="." method="_on_skill_cd_timeout" flags=18]
